--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </button>
 
             <div class="navbar-collapse collapse" id="navbarSupportedContent" >
-              <ul class="navbar-nav mr-auto">
+              <ul class="navbar-nav mr-auto ulNav">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Home </a>
                 </li>
@@ -57,7 +57,7 @@
                 </li>
               </ul>
 
-              <ul class="nav-icon">
+              <ul class="nav-icon ulNav2">
                 <li>
                   <img src="./images/cart.svg" alt="" srcset="">
                 </li>
