--- a/index.html
+++ b/index.html
@@ -1975,21 +1975,11 @@
               </li>
               <li>
                 <p class="footer-links">
-                  <a href="#" class="link-1"
-                    ><img src="./images/002-facebook-logo.svg" alt=""
-                  /></a>
+                  <a href="#" class="link-1"><img src="./images/002-facebook-logo.svg" alt=""/></a>
 
-                  <a href="#"
-                    ><img src="./images/001-twitter-logo-silhouette.svg" alt=""
-                  /></a>
+                  <a href="#"><img src="./images/001-twitter-logo-silhouette.svg" alt=""/></a>
 
-                  <a href="#"
-                    ><img src="./images/004-linkedin-logo.svg" alt=""
-                  /></a>
-
-                  <a href="#"
-                    ><img src="./images/instagram (1).svg" alt=""
-                  /></a>
+                  <a href="#"><img src="./images/004-linkedin-logo.svg" alt=""/></a>
 
                   <a href="#"><img src="./images/005-youtube.svg" alt="" /></a>
                 </p>
